# rust_wasm_pwa_minimal_clock

./: .auto_version_from_date.json  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  cache58.txt  lmakeversionfromdate.json  temp58.txt
.github/workflows/: clear_all_cache.yml  docs_pages.yml  rust.yml  rust_fmt_auto_build_test.yml
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
src/: lib.rs
tmp/: temp57.txt
web_server_folder/rust_wasm_pwa_minimal_clock/: index.html  manifest.json  service_worker.js  start_service_worker.js
web_server_folder/rust_wasm_pwa_minimal_clock/css/: rust_wasm_pwa_minimal_clock.css
web_server_folder/rust_wasm_pwa_minimal_clock/images/: icon.pdn
web_server_folder/web_content_folder/: index.html  service_worker.js
web_server_folder/web_content_folder/css/: rust_wasm_pwa_minimal_clock.css
